--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,15 @@
 body {
     padding-top: 5rem;
 }
+.form-group{
+    width: 70%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  font-family: 'Times New Roman', Times, serif;
+ 
+}
+.form-group label::after{
+  content: "(Required)";
+    color: red;
+}
